reports flickering issue and removing month from madc column chart on hover

--- a/src/client/etc/styles/less/modules/reports.less
+++ b/src/client/etc/styles/less/modules/reports.less
@@ -36,3 +36,12 @@
     top: ~'calc(50% - 29px)';
     width: ~'calc(100% - 81px)';
 }
+.report-charts {
+    svg {
+        &> g{
+            :last-child * {
+                pointer-events: none;
+            }
+        }
+    }
+}
